--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -48,21 +48,62 @@
                 </p>
             </div>
             <section class="missions">
-                <div class="missions-support">
+                <div class="support">
+                    <h3 class="pres-support">
+                        Présentation des différents contrats de maintenance et de mes missions au support.
+                    </h3>
+                    <ul>
+                        Chez Maarch, il y a quatres types de contrats de maintenance distincts :
+                        <li>
+                            1. Partenaires : Maarch collabore étroitement avec des partenaires tels que Atol CD, qui ont un contrat d'intégrateur. Cela signifie qu'ils prospectent 
+                            de nouveaux clients, intègrent le logiciel et assurent sa maintenance de manière autonome. Lorsqu'ils rencontrent des anomalies ou des erreurs 
+                            qu'ils ne parviennent pas à résoudre, les partenaires se tournent vers nous pour bénéficier d'un support complet que nous leur apportons.
+                        </li>
+                        <li>
+                            2. TMA (Tierce Maintenance Applicative) : Ces clients bénéficient d'un traitement particulier, car leur application est développée sur une branche 
+                            distincte de celle du socle principal de Maarch Courrier. Cela permet aux développeurs de travailler en étroite collaboration avec le client pour 
+                            résoudre les bugs ou faire évoluer le logiciel selon les besoins métiers spécifiques. Ainsi, les clients TMA disposent d'une application 
+                            personnalisée avec des fonctionnalités différentes de celles du socle principal.
+                        </li>
+                        <li>
+                            3. Clients SaaS (Software as a Service) : Maarch gère ses propres serveurs où est hébergée l'application classique de Maarch Courrier. Les clients SaaS 
+                            bénéficient d'une maintenance approfondie, avec des migrations gérées par l'équipe infrastructure de Maarch. En cas de problème lié au serveur, la prise 
+                            en charge est rapide. De plus, les correctifs de bugs et les nouvelles fonctionnalités sont traités en priorité pour les clients SaaS.
+                        </li>
+                        <li>
+                            4. Clients on-premise : Ces clients ont un contrat de maintenance standard chez Maarch. Ils bénéficient d'un support technique et fonctionnel, 
+                            ainsi que d'un accompagnement dans les migrations, les mises à jour et le paramétrage de l'application.
+                        </li>
+                    </ul>
                     <h3 class="technique">
                         Support technique
                     </h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                        À mon arrivée chez Maarch, j'ai été affecté au service de support utilisateur de l'application Maarch Courrier. J'ai eu des interactions quotidiennes 
+                        avec les clients on-premise, SaaS et partenaires. Mes responsabilités techniques consistaient à recueillir le maximum d'informations sur les problèmes 
+                        soulevés dans les tickets, afin de transmettre les demandes au support N2 (l'équipe infra), qui intervenait ensuite chez le client pour résoudre les 
+                        problèmes de réseau ou d'intégration.
+
+                        En général, cela impliquait la collecte des fichiers journaux (logs), la vérification que les clients étaient sur les dernières versions disponibles, 
+                        l'assurance que toutes les dépendances nécessaires étaient installées, et le cas échéant, travailler avec le client pour installer les dépendances 
+                        manquantes. Nous récupérions également les logs d'erreurs du navigateur s'il y en avait. Si les anomalies dépassaient le périmètre du support 
+                        de niveau 1 (N1), la demande était transférée au support de niveau 2 (N2).
                     </p>
                     <h3 class="fonctionnel">
                         Support fonctionnel
                     </h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                        Concernant la partie fonctionnelle, nous étions également en communication directe avec le client, soit par le biais des tickets via le logiciel 
+                        de ticketing Forge, soit directement par téléphone. Notre responsabilité était de répondre aux questions du client et de l'assister dans la 
+                        configuration de l'application. Nous avions également la capacité de tester les anomalies signalées par les clients. Si un bug était confirmé, 
+                        nous ouvrions un ticket pour le transmettre à l'équipe R&D afin qu'elle puisse apporter un correctif. Si le bug n'était pas confirmé, nous 
+                        collaborions étroitement avec le client pour trouver une solution. Souvent, il s'agissait d'un problème de configuration. Les clients pouvaient 
+                        également nous soumettre des suggestions d'amélioration. Notre rôle au sein du support était de comprendre les besoins du client, de vérifier 
+                        si la fonctionnalité n'était pas déjà présente dans le logiciel, et le cas échéant, de reformuler techniquement la demande pour l'équipe R&D, 
+                        qui évaluait ensuite la possibilité d'intégrer cette nouvelle fonctionnalité dans le socle.
                     </p>
                 </div>
-                <div class="missions-rd">
+                <div class="rd">
                     <h3 class="backlog">
                         Gestion du backlog
                     </h3>
