--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -50,7 +50,7 @@
             <section class="missions">
                 <div class="support">
                     <h3 class="pres-support">
-                        Présentation des différents contrats de maintenance et de mes missions au support.
+                        Présentation des différents contrats de maintenance et de mes missions au support
                     </h3>
                     <ul>
                         Chez Maarch, il y a quatres types de contrats de maintenance distincts :
@@ -104,17 +104,44 @@
                     </p>
                 </div>
                 <div class="rd">
+                    <h3 class="pres-support">
+                        Présentation du backlog et de mes missions au pôle R&D
+                    </h3>
+                    <p>
+                        Après huit mois de travail au sein du service de support, j'ai eu l'opportunité de rejoindre l'équipe R&D, plus précisément l'équipe produit, 
+                        en tant qu'assistante Product Owner.
+
+                        En qualité d'équipe produit, nous agissons comme intermédiaires entre les équipes de support, d'infrastructure, de projet et de développement. 
+                        Notre responsabilité consiste à gérer le backlog, les user stories, les bugs, ainsi que les différentes cérémonies Scrum. Lorsque des tickets 
+                        sont ajoutés au backlog, notre rôle est de les qualifier afin de préciser les besoins des clients, et de traduire ces demandes de manière à ce 
+                        que les développeurs puissent les comprendre. Une fois le backlog géré, nous nous consacrons aux cérémonies pour discuter et évaluer les tickets, 
+                        ainsi que pour préparer les sprints à venir.
+                    </p>
                     <h3 class="backlog">
                         Gestion du backlog
                     </h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
-                    </p>
-                    <h3 class="ceremonies">
-                        Organisation et pilotage des cérémonies scrum
-                    </h3>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                        L'une de mes principales responsabilités au sein de l'équipe R&D consiste à gérer le backlog, ce qui implique de qualifier les tickets soumis par 
+                        les équipes de support N1 et N2. Cela comprend la compréhension du sujet, sa reformulation, et sa priorisation pour les cérémonies à venir.
+
+                        En ce qui concerne les tickets d'anomalies, nous les classons en fonction de leur niveau de criticité, allant du plus critique au moins critique :
+                        <ul>
+                            <li>
+                                - Bloquant : la prise en charge est très urgente, et si un ticket bloquant est soumis, nous devons ajuster le sprint en cours. Cela signifie que 
+                                l'utilisation de l'application est gravement affectée, et nous devons alors déployer rapidement une correction pour rétablir le service.
+                            </li>
+                            <li>
+                                - Majeur : le sujet implique un dysfonctionnement de l'application, mais n'empêche généralement pas son utilisation. Dans ce cas, un contournement 
+                                est souvent proposé en attendant une correction.
+                            </li>
+                            <li>
+                                - Sérieux : la prise en charge est un peu plus urgente, mais l'utilisation de l'application n'est toujours pas affectée.
+                            </li>
+                            <li>
+                                - Mineur : la prise en charge n'est pas urgente et n'impacte pas l'utilisation de l'application.                        
+                            </li>
+                        </ul>
+
                     </p>
                     <h3 class="us">
                         User story
@@ -124,6 +151,12 @@
                     </p>
                     <h3 class="bugs">
                         Création des tickets de bugs
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="ceremonies">
+                        Organisation et pilotage des cérémonies scrum
                     </h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
