page projet + a propos index

--- a/pages/projet_ecole.html
+++ b/pages/projet_ecole.html
@@ -36,13 +36,14 @@
                 <div class="projet" id="refonte">
 
                     <p class="texte">
-                        Lors de ce TP nous avions un site web qui contenait des erreurs dans la structure HTML et CSS. Il nous a été demandé de corriger les erreurs qui s'étaient 
-                        glissées dans le projet ainsi que de tenir un readme afin d'expliquer les erreurs que nous avions trouvées et comment nous allions les corriger.
+                        Durant cette séance pratique, nous avons été confrontés à un site web présentant des erreurs dans sa structure HTML et CSS. 
+                        Notre tâche consistait à rectifier ces anomalies présentes dans le projet, tout en rédigeant un document readme pour expliquer 
+                        les erreurs identifiées et notre approche pour les corriger.
                         <br>
                         <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
                     <a href="https://cynthiaapura.github.io/refonte_design/" target="_blank">
-                        <img id="projets" src="../asset/refont_web.png" alt="projet1" loading="lazy">
+                        <img id="projets_img" src="../asset/refont_web.png" alt="projet1" loading="lazy">
                     </a>
                 </div>
 
@@ -51,12 +52,13 @@
                 </h2>
                 <div class="projet" id="batman">
                     <p class="texte">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra nunc eget justo placerat, sed dictum nisi finibus. Duis pulvinar leo eu urna fermentum condimentum elementum eu ligula. Integer quis eros finibus, interdum elit quis, mollis lectus. Maecenas in lorem a mauris tempus gravida ut et lacus. Integer faucibus commodo aliquam. Praesent pretium lacinia risus eget elementum.
+                        Ce projet, réalisé au cours de notre première année, nous a servi d'introduction aux manipulations initiales de HTML et CSS. 
+                        Il constituait une première approche du développement web, permettant de se familiariser avec ces langages fondamentaux.
                         <br>
                         <a href="https://github.com/cynthiaapura/activite_gotham" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
                     <a href="https://cynthiaapura.github.io/activite_gotham/" target="_blank">
-                        <img id="projets" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
+                        <img id="projets_img" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
 
@@ -65,12 +67,16 @@
                 </h2>
                 <div class="projet" id="js">
                     <p class="texte">
-                        Sed lobortis augue mattis sem mollis, et vehicula urna bibendum. Sed suscipit magna ac ligula semper, sed maximus turpis elementum. Ut placerat ultrices ex quis hendrerit. Phasellus ultricies, ligula vitae cursus bibendum, ligula arcu iaculis eros, vitae laoreet nibh leo vel nunc. Vestibulum faucibus nisi finibus, finibus purus ut, varius elit. Suspendisse justo magna, semper interdum pharetra eu, feugiat sit amet sem. 
+                        Ce projet constitue une initiation au JavaScript. Il se compose de quatre exercices visant à apprendre les bases du langage.
+                        Le premier exercice visait à nous familiariser avec la création de modales et l'affichage de messages adaptés. 
+                        Le deuxième exercice nous a permis de nous familiariser avec l'algorithmie pure en créant des modales et en effectuant des calculs de données. 
+                        Le troisième exercice nous a initiés à la gestion des clics sur un bouton et à l'incrémentation de valeurs. Enfin, le quatrième exercice nous 
+                        a permis de manipuler des valeurs booléennes.
                         <br>
-                        <a href="https://github.com/cynthiaapura/tp_JS" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                        <a href="https://github.com/cynthiaapura/tp_JS" class="lien-git" target="_blank">Lien vers le projet GitHub</a>                    
                     </p>
                     <a href="https://cynthiaapura.github.io/tp_JS/" target="_blank">
-                        <img id="projets" src="../asset/tp_js.png" alt="projet2" loading="lazy">
+                        <img id="projets_img" src="../asset/tp_js.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
 
@@ -79,12 +85,15 @@
                 </h2>
                 <div class="projet" id="php">
                     <p class="texte">
-                        Phasellus porttitor, lectus scelerisque eleifend fringilla, purus velit lacinia sem, sed porta magna erat eget odio. Sed quis scelerisque lectus. Vestibulum faucibus convallis orci, sit amet fermentum mauris fermentum sit amet. Fusce congue iaculis sapien a interdum. Sed semper ligula condimentum dui maximus malesuada. Vivamus at purus ut urna gravida consequat id nec tortor. Nullam diam magna, tincidunt ut tristique quis, sollicitudin a diam. Vivamus vitae tincidunt lectus. 
+                        Lors de cette étude de cas, nous avions à notre disposition un visuel en HTML que nous devions reproduire. 
+                        Une fois la version statique validée, notre tâche consistait à reproduire la même page en utilisant PHP. 
+                        Ce travail pratique nous a été confié dans le but de valider nos compétences en PHP et d'approfondir nos connaissances 
+                        dans ce langage de programmation.
                         <br>
                         <a href="https://github.com/cynthiaapura/etude_de_cas" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
                     <a href="https://cynthiaapura.github.io/etude_de_cas/" target="_blank">
-                        <img id="projets" src="../asset/tp_php.png" alt="projet2" loading="lazy">
+                        <img id="projets_img" src="../asset/tp_php.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
 
@@ -93,12 +102,17 @@
                 </h2>
                 <div class="projet" id="gmail">
                     <p class="texte">
-                        Praesent arcu nulla, volutpat in tincidunt blandit, sodales sit amet magna. Nam in sodales tortor. Praesent rhoncus efficitur leo, vel porta mi venenatis eget. Phasellus laoreet faucibus dui et imperdiet. Sed ut efficitur tellus, facilisis posuere sem. Donec consectetur purus nisi. Nullam eu leo et ipsum laoreet suscipit id quis sapien. In quis arcu aliquet, cursus leo a, egestas nisl. Vestibulum eleifend commodo ante, vel ornare orci suscipit ut. 
+                        Ce projet consistait à concevoir une page web similaire à GMAIL. Divisé en trois parties, il impliquait la création 
+                        initiale du site en HTML et CSS, puis l'introduction du PHP pour le rendre dynamique. Enfin, la dernière phase consistait 
+                        à connecter le site à une base de données pour assurer la communication. Cette liaison avec la base de données nécessitait 
+                        l'enregistrement des données utilisateur lors de la création de compte, suivi de leur récupération pour permettre la 
+                        connexion. Ce travail nous a permis de nous familiariser avec les méthodes POST et GET, les sessions en PHP, ainsi que 
+                        la gestion de base de données.
                         <br>
                         <a href="https://github.com/cynthiaapura/projet_gmail" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
                     <a href="https://cynthiaapura.github.io/projet_gmail/" target="_blank">
-                        <img id="projets" src="../asset/home-page.png" alt="projet2" loading="lazy">
+                        <img id="projets_img" src="../asset/home-page.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
         </section>
