--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <h2 id="about" class="section-page">
                 A propos
             </h2>
-            <p class="bg-tile">
+            <div class="bg-tile">
                 Je m'appelle Cynthia Apura, en pleine reconversion professionnelle après avoir passé cinq ans dans le secteur de la beauté. 
                 Suite à un bilan de compétences approfondi, j'ai opté pour une nouvelle aventure dans le domaine de l'informatique, avec pour 
                 objectif de me spécialiser en tant que Product Owner.
                 J'ai rejoint l'équipe de Maarch en janvier 2023, initialement au sein du pôle Delivery en tant que support technique et fonctionnel. 
                 Après huit mois au sein de cette équipe, j'ai eu l'opportunité d'intégrer l'équipe R&D en tant qu'assistante Product Owner.
                 Mon parcours illustre ma volonté d'acquérir de nouvelles compétences et de m'épanouir dans un domaine en constante évolution.
-            </p>
+            </div>
 
 
             <h2 id="skills" class="section-page">
