--- a/pages/fiche_E5.html
+++ b/pages/fiche_E5.html
@@ -107,9 +107,13 @@
                     Itération 3
                 </h4>
                 <p class="iteration">
-                    Conception de la maquette graphique de l'application.
-                    Développement d'une classe fille de Passerelle pour gérer la connexion à la base de données via JDBC.
-                    Ajout de fonctionnalités permettant la manipulation des données suivantes dans la base de données : 
+                    1. Conception de la maquette graphique de l'application
+                    <br>
+                    <img src="../asset/connexion.png" alt="arbre heuristique" class="img_maquette">
+                    <br>
+                    2. Développement d'une classe fille de Passerelle pour gérer la connexion à la base de données via JDBC
+                    <br>
+                    3. Ajout de fonctionnalités permettant la manipulation des données suivantes dans la base de données : 
                     <ul class="list_iteration">
                         <li>
                             ajout, modification et lecture d'un root
@@ -131,9 +135,11 @@
                     Itération 4
                 </h4>
                 <p class="iteration">
-                    Implémentation d'une interface graphique pour permettre aux administrateurs de gérer leurs ligues plus facilement.
-                    Rédaction d'une documentation d'utilisation destinée aux administrateurs.
-                    Sécurisation des mots de passe par hachage avant leur stockage dans la base de données.
+                    1. Implémentation d'une interface graphique pour permettre aux administrateurs de gérer leurs ligues plus facilement
+                    <br>
+                    2. Rédaction d'une documentation d'utilisation destinée aux administrateurs
+                    <br>
+                    3. Sécurisation des mots de passe par hachage avant leur stockage dans la base de données
                 </p>
 
             </div>
