--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 id="name">
                 APURA Cynthia
                 <br>
-                Portfolio développeuse front & back
+                Portfolio développeuse front & back end
             </h1>
         </section>
 
