--- a/pages/veille.html
+++ b/pages/veille.html
@@ -40,26 +40,153 @@
                 domaine dynamique. 
                 Je mettrai en lumière leur impact sur l'efficacité, la qualité et la coopération au sein des équipes 
                 de développement.
+                <br><br>
+                Une méthodologie de développement logiciel se réfère à un ensemble de processus organisés et structurés 
+                utilisés par une équipe de développement pour créer un produit logiciel. Il existe une variété de modèles 
+                de développement, chacun avec ses propres caractéristiques et approches. Il est important de noter qu'aucun 
+                modèle n'est universellement applicable à tous les projets ; le choix de la méthodologie appropriée dépend 
+                des circonstances spécifiques du projet. Fondamentalement, une méthodologie de développement logiciel 
+                fournit un cadre défini de pratiques, de principes et de processus pour gérer et organiser efficacement 
+                le développement de logiciels ou de projets informatiques. Elle guide la planification, l'exécution, 
+                le contrôle et la livraison des résultats de manière cohérente et efficiente.
+                <br><br>
+                Il est important de suivre l'évolution des méthodologies de développement pour rester compétitif, répondre 
+                aux besoins changeants des utilisateurs, optimiser les ressources et s'adapter aux nouvelles technologies.
             </p>
         </section>
 
         <section class="methodo">
             <div class="ancienne-metho">
                 <h1>
-                    Partie 3 anciennes metho
+                    Anciennes méthodologies
                 </h1>
+                <p>
+                    Les anciennes méthodologies, souvent les premières à être introduites sur le marché, sont progressivement 
+                    délaissées en raison de leur rigidité et du manque de communication entre les équipes. Elles cèdent la place 
+                    à de nouvelles méthodologies plus agiles qui offrent une meilleure flexibilité et favorisent une collaboration 
+                    plus étroite entre les membres de l'équipe de développement.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthode en cascade
+                </h4>
+                <p>
+                    Parmi ces méthodes, l'une des plus connues est la <b>méthode en cascade</b>, également appelée waterfall, qui est 
+                    une approche de gestion de projet linéaire et séquentielle. Elle découpe le projet en plusieurs étapes distinctes 
+                    et successives, où chaque étape dépend de la précédente pour commencer et être approuvée.
+                    Le cycle de vie d'un projet en cascade comprend généralement sept phases : planification, analyse, conception, 
+                    mise en œuvre, tests, déploiement et maintenance.
+                    <br><br>
+                    Les avantages de cette méthode incluent une structure claire et une planification simplifiée, une prévisibilité 
+                    accrue et une gestion des risques améliorée, ainsi qu'une documentation claire et une traçabilité.
+                    Cependant, il est important de reconnaître ses limites, notamment sa rigidité et son manque d'adaptation aux 
+                    changements, son défaut de collaboration et de communication, sa visibilité réduite et sa prise de décision 
+                    moins rapide, ainsi que son adaptation préférable aux petits projets simples.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthode en V
+                </h4>
+                <p>
+                    Une autre méthodologie bien connue, mais qui commence également à être délaissée progressivement, est la <b>méthode 
+                    en V</b>, également appelée modèle en V. Cette approche structurée du développement logiciel met en avant la validation 
+                    et les tests à chaque étape du processus. Inspirée du modèle en cascade, elle intègre des phases de test spécifiques
+                    à chaque étape du cycle de développement.
+
+                    Elle se déroule en plusieurs phases :
+
+                    <ul class="list_metho">
+                        <li>
+                            Analyse et conception : Définition des exigences et conception de l'architecture du logiciel.
+                        </li>
+                        <li>
+                            Spécification des tests : Établissement des tests pour chaque exigence et composant.
+                        </li>
+                        <li>
+                            Conception détaillée : Description précise de la conception de chaque composant.
+                        </li>
+                        <li>
+                            Codage : Implémentation du code source selon les spécifications.
+                        </li>
+                        <li>
+                            Tests unitaires : Test de chaque composant individuellement.
+                        </li>
+                        <li>
+                            Intégration des tests : Test de l'intégration des différents composants.
+                        </li>
+                        <li>
+                            Tests système : Test du système complet pour vérifier sa conformité aux exigences.
+                        </li>
+                        <li>
+                            Maintenance : Correction des bugs et apport d'améliorations.
+                        </li>
+                    </ul>
+                <p>
+                    Bien qu'elle présente des avantages tels que la focalisation sur la qualité, une structure claire favorisant une 
+                    communication améliorée et une gestion des risques optimisée, cette méthode peut être rigide, allonger le temps de 
+                    développement et ne pas être adaptée aux projets agiles.
+                    <br><br>
+                    En résumé, la méthode en V offre une planification simplifiée, une gestion des risques accrue et une documentation 
+                    claire, mais elle peut présenter des limites en termes de flexibilité et d'adaptabilité aux projets agiles.
+                </p>
             </div>
             <div class="nouvelle-metho">
                 <h1>
-                    Partie 4 nouvelles metho
+                    Méthodologies actuelles
                 </h1>
+                <p>
+                    La méthode agile est une approche itérative et incrémentale du développement logiciel qui met l'accent sur la 
+                    flexibilité, la collaboration, et la livraison continue de logiciels fonctionnels et de valeur pour les clients. 
+                    Contrairement aux méthodologies traditionnelles telles que la cascade, qui suivent un plan rigide et prédictif, 
+                    les méthodes agiles s'adaptent aux changements et aux évolutions tout au long du projet.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthode Scrum
+                </h4>
+                <p>
+                    Pour commencer, parmi les méthodologies de développement les plus renommées figure la <b>méthode Scrum</b>. C'est une
+                    approche agile de gestion de projet, elle se caractérise par sa capacité à fournir une livraison régulière de valeur, 
+                    une flexibilité face aux changements, une transparence organisationnelle et une auto-organisation des équipes. 
+                    <br><br>
+                    Ses avantages incluent une réactivité aux évolutions du marché, une livraison constante de valeur aux clients, 
+                    une collaboration améliorée, une réduction des risques et une meilleure visibilité sur l'état d'avancement du projet. 
+                    Cependant, la complexité de sa mise en œuvre, le besoin de discipline rigoureuse et le risque de se concentrer excessivement 
+                    sur les fonctionnalités prioritaires peuvent représenter des défis. Néanmoins, les bénéfices de Scrum se traduisent par une 
+                    productivité accrue, des délais réduits, une culture d'apprentissage continue et une capacité d'adaptation rapide aux changements, 
+                    contribuant ainsi à maintenir la pertinence du produit développé au fil du temps.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthode en Kanban
+                </h4>
+                <p>
+                    Ensuite, on retrouve la <b>méthode Kanban</b>, qui adopte une approche visuelle pour gérer le flux de travail. Un tableau Kanban est 
+                    utilisé pour visualiser les tâches et leur progression, facilitant ainsi l'identification efficace des goulets d'étranglement. Dans le 
+                    système Kanban, les tâches sont représentées par des cartes physiques ou numériques disposées sur un tableau, avec des colonnes 
+                    représentant les différentes étapes du workflow telles que "À faire", "En cours", "En test", "Fait". Des réunions courtes et 
+                    fréquentes permettent à l'équipe de discuter des progrès, d'identifier les obstacles rencontrés et d'apporter des améliorations 
+                    au processus. 
+                    <br><br>
+                    Les avantages de cette méthode résident dans sa simplicité et sa visibilité du workflow, ainsi que dans 
+                    l'identification des goulets d'étranglement. Tout au long du développement, les équipes restent focalisées sur la livraison continue. 
+                    Cependant, son manque de structure formelle peut compliquer la définition d'objectifs clairs et le suivi des progrès. De plus, elle 
+                    repose fortement sur une communication et une collaboration efficaces, ce qui n'est pas toujours évident. Il est important de noter 
+                    que Kanban peut être combiné avec d'autres méthodes agiles telles que Scrum ou XP (Extreme Programming) pour tirer parti des forces de 
+                    chacune d'entre elles.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthode Extreme Programming
+                </h4>
+                <p>
             </div>
         </section>
 
         <section class="metho-emergentes">
             <div>
                 <h1>
-                    Partie 5 metho emergentes
+                    Méthodologies emergentes
                 </h1>
             </div>
         </section>
@@ -67,28 +194,16 @@
         <section class="tdd">
             <div>
                 <h1>
-                    Partie 6 TDD/DDD
+                    Test Driven Development & Domain Driven Design
                 </h1>
             </div>
 
         </section>
 
-        <section class="entreprises">
-            <div class="impacts">
-                <h1>Partie 7 </h1>
-            </div>
-            <div class="bien-faits">
-                <h1>Partie 8</h1>
-            </div>
-            <div class="etude-de-cas">
-                <h1>Partie 9</h1>
-            </div>
-        </section>
-
         <section class="cloud-native">
             <div>
                 <h1>
-                    Partie 10 IA et cloud-native
+                    Intelligence Artificielle & Cloud-native
                 </h1>
             </div>
         </section>
